vlib/v/checker/tests/for_in_iterator_returning_multiple_values_err.vv
struct TestStruct {}

fn (t TestStruct) next() ?(string, string) {
	return 'foo', 'bar'
}

t := TestStruct{}
for x in t {
	println(x) // ('foo', 'bar')
	break
}
